--- a/src/App.css
+++ b/src/App.css
@@ -2,31 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +11,40 @@
     transform: rotate(360deg);
   }
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
+body {
+  background-image: url("/src/tft-wallpaper.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+form {
+  display:table;
+  display:inline-block;
+}
+
+
+label {
+  display:table-cell;
+}
+
+input {
+  display:table-cell;
+}
+
